add some codes ...

--- a/oauth2-client/src/main/resources/application.properties
+++ b/oauth2-client/src/main/resources/application.properties
@@ -1,56 +1,16 @@
-server.port=8081
+server.port=8070
 
 logging.level.org.springframework.security=trace
 
-#spring.data.redis.host=192.168.16.103
-#spring.data.redis.port=30721
-#spring.data.redis.database=1
-
-server.servlet.session.cookie.name=JSESSIONID-2
-
+server.servlet.session.cookie.name=CLIENT-SESSION
 
 spring.security.oauth2.client.registration.demo.provider=demo
 spring.security.oauth2.client.registration.demo.client-id=demo
 spring.security.oauth2.client.registration.demo.client-secret=demo
 spring.security.oauth2.client.registration.demo.authorization-grant-type=authorization_code
-#spring.security.oauth2.client.registration.demo.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
-spring.security.oauth2.client.registration.demo.redirect-uri=http://127.0.0.1:8081/login/oauth2/code/demo
-#spring.security.oauth2.client.registration.demo.client-authentication-method=POST
-spring.security.oauth2.client.registration.demo.scope=openid, profile, user_info, pull_requests
+spring.security.oauth2.client.registration.demo.redirect-uri=http://127.0.0.1:8070/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.demo.scope=message.read
 spring.security.oauth2.client.registration.demo.client-name=demo
-
-#spring.security.oauth2.client.registration.client-id-1.provider=demo-client-id
-#spring.security.oauth2.client.registration.client-id-1.client-id=demo-client-id
-#spring.security.oauth2.client.registration.client-id-1.client-secret={noop}demo-client-secret
-#spring.security.oauth2.client.registration.client-id-1.authorization-grant-type=authorization_code
-#spring.security.oauth2.client.registration.client-id-1.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
-##spring.security.oauth2.client.registration.client-id-1.client-authentication-method=POST
-#spring.security.oauth2.client.registration.client-id-1.scope=openid, profile, user_info, pull_requests
-#spring.security.oauth2.client.registration.client-id-1.client-name=demo-client-id
-#
-#spring.security.oauth2.client.registration.client-id-2.provider=demo-client-id2
-#spring.security.oauth2.client.registration.client-id-2.client-id=demo-client-id
-#spring.security.oauth2.client.registration.client-id-2.client-secret={noop}demo-client-secret
-#spring.security.oauth2.client.registration.client-id-2.authorization-grant-type=authorization_code
-#spring.security.oauth2.client.registration.client-id-2.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
-##spring.security.oauth2.client.registration.client-id-2.client-authentication-method=POST
-#spring.security.oauth2.client.registration.client-id-2.scope=openid, profile, user_info, pull_requests
-#spring.security.oauth2.client.registration.client-id-2.client-name=demo-client-id2
 
 spring.security.oauth2.client.provider.demo.authorization-uri=http://127.0.0.1:8080/oauth2/authorize
 spring.security.oauth2.client.provider.demo.token-uri=http://127.0.0.1:8080/oauth2/token
-spring.security.oauth2.client.provider.demo.user-info-uri=http://127.0.0.1:8082/user/info
-spring.security.oauth2.client.provider.demo.user-name-attribute=name
-spring.security.oauth2.client.provider.demo.jwk-set-uri=http://127.0.0.1:8080/oauth2/jwks
-
-#spring.security.oauth2.client.provider.demo-client-id.authorization-uri=http://127.0.0.1:8080/oauth2/authorize
-#spring.security.oauth2.client.provider.demo-client-id.token-uri=http://127.0.0.1:8080/oauth2/token
-#spring.security.oauth2.client.provider.demo-client-id.user-info-uri=http://127.0.0.1:8082/user/info
-#spring.security.oauth2.client.provider.demo-client-id.user-name-attribute=name
-#spring.security.oauth2.client.provider.demo-client-id.jwk-set-uri=http://127.0.0.1:8080/oauth2/jwks
-#
-#spring.security.oauth2.client.provider.demo-client-id2.authorization-uri=http://127.0.0.1:8080/oauth2/authorize
-#spring.security.oauth2.client.provider.demo-client-id2.token-uri=http://127.0.0.1:8080/oauth2/token
-#spring.security.oauth2.client.provider.demo-client-id2.user-info-uri=http://127.0.0.1:8082/user/info
-#spring.security.oauth2.client.provider.demo-client-id2.user-name-attribute=name
-#spring.security.oauth2.client.provider.demo-client-id2.jwk-set-uri=http://127.0.0.1:8080/oauth2/jwks
