--- a/resource-server/src/main/resources/application.properties
+++ b/resource-server/src/main/resources/application.properties
@@ -1,17 +1,7 @@
-server.port=8082
+server.port=8090
 
 logging.level.org.springframework.security=trace
 
-#spring.data.redis.host=192.168.16.103
-#spring.data.redis.port=30721
-#spring.data.redis.database=1
-
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://127.0.0.1:8080/oauth2/jwks
-
-#spring.security.oauth2.resourceserver.opaquetoken.client-id=demo
-#spring.security.oauth2.resourceserver.opaquetoken.client-secret={noop}demo
-##spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://127.0.0.1:8080/oauth2/token
-#spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://127.0.0.1:8080/oauth2/introspect
-##spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://127.0.0.1:8080/oauth2/token/introspect
-#
-#spring.security.oauth2.authorizationserver.endpoint.token-introspection-uri=http://127.0.0.1:8080/oauth2/introspect
+spring.security.oauth2.resourceserver.opaquetoken.client-id=demo
+spring.security.oauth2.resourceserver.opaquetoken.client-secret={noop}demo
+spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://127.0.0.1:8080/oauth2/introspect
