add some codes ...

--- a/oauth2-client/src/main/resources/application.properties
+++ b/oauth2-client/src/main/resources/application.properties
@@ -4,13 +4,13 @@ logging.level.org.springframework.security=trace
 
 server.servlet.session.cookie.name=CLIENT-SESSION
 
-spring.security.oauth2.client.registration.demo.provider=demo
-spring.security.oauth2.client.registration.demo.client-id=demo
-spring.security.oauth2.client.registration.demo.client-secret=demo
-spring.security.oauth2.client.registration.demo.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.demo.redirect-uri=http://127.0.0.1:8070/login/oauth2/code/{registrationId}
-spring.security.oauth2.client.registration.demo.scope=message.read
-spring.security.oauth2.client.registration.demo.client-name=demo
+spring.security.oauth2.client.registration.messaging-client-authorization-code.provider=client-provider
+spring.security.oauth2.client.registration.messaging-client-authorization-code.client-id=demo-client
+spring.security.oauth2.client.registration.messaging-client-authorization-code.client-secret=demo-client
+spring.security.oauth2.client.registration.messaging-client-authorization-code.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.messaging-client-authorization-code.redirect-uri=http://127.0.0.1:8070/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.messaging-client-authorization-code.scope=message.read
+spring.security.oauth2.client.registration.messaging-client-authorization-code.client-name=messaging-client-authorization-code
 
-spring.security.oauth2.client.provider.demo.authorization-uri=http://127.0.0.1:8080/oauth2/authorize
-spring.security.oauth2.client.provider.demo.token-uri=http://127.0.0.1:8080/oauth2/token
+spring.security.oauth2.client.provider.client-provider.authorization-uri=http://127.0.0.1:8080/oauth2/authorize
+spring.security.oauth2.client.provider.client-provider.token-uri=http://127.0.0.1:8080/oauth2/token
