--- a/resource-server/src/main/resources/application.properties
+++ b/resource-server/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8090
 
 logging.level.org.springframework.security=trace
 
-spring.security.oauth2.resourceserver.opaquetoken.client-id=demo
-spring.security.oauth2.resourceserver.opaquetoken.client-secret={noop}demo
+spring.security.oauth2.resourceserver.opaquetoken.client-id=demo-client
+spring.security.oauth2.resourceserver.opaquetoken.client-secret=demo-client
 spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://127.0.0.1:8080/oauth2/introspect
